--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="assets/css/styles.css" />
+  </head>
+  <body>
     <h1>My first project</h1>
     <h1>My first project</h1>
     <p>This is My first project build in an IDE!</p>
-    <img src="assets/images/01-02-02_ci-logo.png" alt="Code Institute Logo">
-</body>
+    <h2> VS Code is awesome! </h2>
+    <img src="assets/images/01-02-02_ci-logo.png" alt="Code Institute Logo" />
+  </body>
+
 </html>
+
